--- a/templates/home/users.html.twig
+++ b/templates/home/users.html.twig
@@ -8,34 +8,55 @@
         <aside>
             <nav>
                 <ul>
-                    {% for user in users %}
-                        <li>
-                            <p>{{ user.email }}</p>
-                            <button class="open-modal" data-user-id="{{ user.id }}">Envoyer un message</button>
-                        </li>
-                    {% endfor %}
+                    <li data-controller="modal">
+                        <p>{{ user.email }}</p>
+                        <button data-target="modal.openModal" data-action="click->modal#open" class="open-modal">Envoyer un message</button>
+                        <div data-modal-target="modal" class="modal">
+                            <turbo-frame id="message_form">
+                                <form action="{{ path('app_send_message', {'id': user.id}) }}" method="POST">
+                                    <input type="hidden" name="receiver_id" value="{{ user.id }}">
+                                    <input type="text" name="content">
+                                    <button>Envoyer</button>
+                                </form>
+                            </turbo-frame>
+                        </div>
+                        <div data-modal-target="overlay" data-action="click->modal#close" class="overlay"></div>
+                    </li>
                 </ul>
-                
             </nav>
         </aside>
-        <section>
-            <div class="wrap">
-                <div class="user">
-                </div>
-            </div>
-            <!-- Turbo stream listen pour écouter l'évènement (s'abonner au channel) -->
-            <div id="messages" {{ turbo_stream_listen('chat') }}>
-                
-            </div>
-        </section>
-        <div class="modal">
-            {# <turbo-frame id="message_form">
-                {{ form_start(form) }}
-                    {{ form_widget(form.content) }}
-                    <button>Envoyer</button>
-                {{ form_end(form) }}
-            </turbo-frame> #}
-        </div>
     </div>
 </main>
+<style>
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0,0,0,.5);
+        z-index: 1;
+        display: none;
+    }
+
+    .overlay.active {
+        display: block;
+    }
+
+    .modal {
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 15px;
+        z-index: 2;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: none;
+    }
+
+    .modal.active {
+        display: block;
+    }
+</style>
 {% endblock %}
