--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="{{ path('app_home') }}">Home</a></li>
+                    <li><a href="{{ path('app_discussions') }}">Messagerie</a></li>
                     {% if app.user %}
                         <li><a href="{{ path('app_logout') }}">Logout</a></li>
                     {% else %}
